# auto-topoff

./: CMakeLists.txt  README.md
components/distance_sensor/: CMakeLists.txt  distance_sensor.c  distance_sensor.h
hardware/: README.md
main/: CMakeLists.txt  idf_component.yml  main.c
website/: README.md  main.html  script.js  styles.css
